# chnu.cv

./: .gitignore  CLAUDE.md  pyproject.toml
lab-01_intro/: homework.ipynb
lab-02_pixel-ops/: homework.ipynb
lab-04_edge-detection/: homework.ipynb
lab-06_image-features/: homework.ipynb  homework.qmd
lab-08_otsu-thresholding/: homework.py
lab-09-face-detection/: demo.ipynb  demo.py  homework.py  live_report.md
lab-10_object-tracking/: config.json  demo.py
