[project]
name = "chnu.computer-vision"
version = "0.1.0"
description = "CNHU CV2026 course"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "dlib>=20.0.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.1",
    "nbformat>=5.10.4",
    "ruff>=0.15.11",
]
